recursion.cons.ismember.IsMember.scala.error
Erreur de compilation :
IsMember:8: error: type mismatch;
 found   : (List[Int], Int)
 required: Boolean
    return(l.tail, v)
          ^