recursion.cons.ismember.IsMember.scala.code
def isMember(l:List[Int], v:Int): Boolean = {
  var n: Int = l.head
  
  if (n == v){
    return(true)
  }else{
    return(l.tail, v)
  }
}